@@ -1,3 +1,12 @@
+2004-04-15  Richard Hult  <richard@imendio.com>
+
+	* src/planner-task-tree.c: (planner_task_tree_move_task_up),
+	(planner_task_tree_move_task_down): Patch from Lincoln.
+
+2004-04-15  Richard Hult  <richard@imendio.com>
+
+	* src/planner-window.c (window_do_save_as): Fix build.
+
 2004-04-14  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-project.c: (mrp_project_save_as):
